# Words2Emotions

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
.github/workflows/: pages.yml
hello-wasm/: Cargo.toml
src/lib/: Modal.svelte
src/routes/: +layout.svelte  +page.svelte
src/text_emotions_rust/: package.json  pipeline.cbor  text_emotions_rust.d.ts  text_emotions_rust.js  text_emotions_rust_bg.wasm  text_emotions_rust_bg.wasm.d.ts
text_emotions_rust/: Cargo.toml  build.sh
text_emotions_rust/dataset/: gooddata.csv  test.csv
text_emotions_rust/examples/: test.rs
text_emotions_rust/src/: lib.rs  main.rs  model.rs  model_interactive.rs
