[package]
name = "text_emotions_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.0"
dict = "0.1.5"
linfa = "0.6.1"
linfa-logistic = "0.6.1"
linfa-preprocessing = "0.6.1"
ndarray = "0.15.6"

#getrandom = { version = "0.2", features = ["js"] } used for compiling to WASM